tests/baselines/reference/checkJsxChildrenProperty15.errors.txt
file.tsx(1,1): error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.
file.tsx(10,17): error TS2322: Type '{ children: Element; }' is not assignable to type 'IntrinsicAttributes'.
  Property 'children' does not exist on type 'IntrinsicAttributes'.
file.tsx(11,13): error TS2322: Type '{ children: Element; key: string; }' is not assignable to type 'IntrinsicAttributes'.
  Property 'children' does not exist on type 'IntrinsicAttributes'.
file.tsx(12,13): error TS2322: Type '{ children: Element[]; key: string; }' is not assignable to type 'IntrinsicAttributes'.
  Property 'children' does not exist on type 'IntrinsicAttributes'.


==== file.tsx (4 errors) ====
    import React = require('react');
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.
    
    const Tag = (x: {}) => <div></div>;
    
    // OK
    const k1 = <Tag />;
    const k2 = <Tag></Tag>;
    
    // Not OK (excess children)
    const k3 = <Tag children={<div></div>} />;
                    ~~~~~~~~
!!! error TS2322: Type '{ children: Element; }' is not assignable to type 'IntrinsicAttributes'.
!!! error TS2322:   Property 'children' does not exist on type 'IntrinsicAttributes'.
    const k4 = <Tag key="1"><div></div></Tag>;
                ~~~
!!! error TS2322: Type '{ children: Element; key: string; }' is not assignable to type 'IntrinsicAttributes'.
!!! error TS2322:   Property 'children' does not exist on type 'IntrinsicAttributes'.
    const k5 = <Tag key="1"><div></div><div></div></Tag>;
                ~~~
!!! error TS2322: Type '{ children: Element[]; key: string; }' is not assignable to type 'IntrinsicAttributes'.
!!! error TS2322:   Property 'children' does not exist on type 'IntrinsicAttributes'.
    